--- a/reset.css
+++ b/reset.css
@@ -127,8 +127,8 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 1.6rem;
   font-weight: normal;
-  height: 2000px;
-  width: 100%;
+  background-color: #f3f3f3;
+  padding: 2rem;
 }
 
 img {
