--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,181 @@
-body {
+.post {
+  padding: 2rem;
+  border-radius: 1rem;
   background-color: #fff;
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 100rem;
+  margin: 0 auto;
+}
+.post__left, .post__right {
+  width: calc(50% - 1rem);
+}
+.post__media {
+  height: 25rem;
+  position: relative;
+  margin-bottom: 3.5rem;
+}
+.post__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 1rem;
+}
+.post__image--small {
+  width: 15rem;
+  height: 10rem;
+  margin-right: 1.5rem;
+  flex-shrink: 0;
+}
+.post__category {
+  position: absolute;
+  font-size: 1.2rem;
+  display: inline-block;
+  padding: 1rem;
+  border-radius: 2rem;
+  color: white;
+  background-image: linear-gradient(to right, #fd9c84, #fc556f);
+  top: 2rem;
+  left: 2rem;
+  z-index: 2;
+}
+.post__icon {
+  position: absolute;
+  width: 5rem;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  color: white;
+  background-image: linear-gradient(to right, #fd9c84, #fc556f);
+  border-radius: 5rem;
+  bottom: 0;
+  right: 2rem;
+  transform: translateY(50%);
+  z-index: 2;
+}
+.post-author {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  color: #999;
+  font-size: 1.4rem;
+  margin-bottom: 2rem;
+}
+.post-author__avartar {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 4rem;
+  object-fit: cover;
+  margin-right: 1rem;
+}
+.post-author__name {
+  position: relative;
+  margin-right: 2.5rem;
+  padding-right: 2.5rem;
+}
+.post-author__name:before {
+  content: "";
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 1rem;
+  background-color: #fc556f;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.post__date {
+  color: #999;
+  font-size: 1.4rem;
+}
+.post__title {
+  font-weight: bold;
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+  line-height: 1.4;
+}
+.post__title--small {
+  font-size: 1.4rem;
+  margin-bottom: 0;
+}
+.post__desc {
+  font-size: 1.4rem;
+  line-height: 1.6;
+  color: #999;
+}
+.post__item {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.post__item:not(:last-child) {
+  padding-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
+  border-bottom: 1px solid #eee;
+}
+.post__content {
+  width: 100%;
+  flex-grow: 1;
+}
+.post__link {
+  text-decoration: none;
+  color: inherit;
+}
+
+@media screen and (max-width: 767px) {
+  .post__left, .post__right {
+    width: 100%;
+  }
+  .post__left {
+    margin-bottom: 2.5rem;
+  }
+  .post__image--small {
+    width: 10rem;
+    height: auto;
+  }
+  .post__title {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+  }
+  .post__title--small {
+    font-size: 1.2rem;
+    line-height: 1.4;
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .post__left {
+    margin-bottom: 2.5rem;
+  }
+  .post__image--small {
+    width: 10rem;
+    height: auto;
+  }
+  .post__title {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+  }
+  .post__title--small {
+    font-size: 1.2rem;
+    line-height: 1.4;
+    margin-bottom: 1rem;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
