--- a/reset.css
+++ b/reset.css
@@ -1,3 +1,8 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
 html,
 body,
 div,
@@ -121,17 +126,4 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
-}
-
-body {
-  font-family: "Poppins", sans-serif;
-  font-size: 1.6rem;
-  font-weight: normal;
-  background-color: #f3f3f3;
-  padding: 2rem;
-}
-
-img {
-  display: block;
-  max-width: 100%;
 }
