--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,243 @@
-.checkbox__input {
+div,
+input {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.4rem;
+  font-weight: normal;
+  background-color: #fbfbfd;
+  padding: 5rem;
+  min-height: 100vh;
+}
+
+body,
+input,
+select,
+textarea,
+label {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.6rem;
+  font-weight: normal;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.signup {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
+  padding: 10rem;
+  display: flex;
+  justify-content: space-between;
+}
+.signup__content, .signup__image {
+  width: calc(50% - 4rem);
+}
+.signup__heading {
+  font-weight: bold;
+  font-size: 4.5rem;
+  margin-bottom: 3rem;
+  color: #291667;
+}
+.signup__caption {
+  color: #fa4c53;
+  font-weight: bold;
+  margin-bottom: 4.5rem;
+  position: relative;
+  padding-left: 7rem;
+}
+.signup__caption::before {
+  content: "";
+  position: absolute;
+  width: 5rem;
+  height: 2px;
+  background-color: #fa4c53;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.signup-social {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin-bottom: 6rem;
+}
+.signup-social__item {
+  padding: 1.5rem 2.5rem;
+  border-radius: 1rem;
+  border: 1px solid #eee;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  color: #291667;
+  width: calc(50% - 1.5rem);
+}
+.signup-social__icon {
+  margin-right: 2rem;
+}
+.signup-form__row {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin-bottom: 30px;
+}
+.signup-form__row .signup-form__group {
+  width: calc(50% - 1.5rem);
+}
+.signup-form__label {
+  color: #291667;
+  display: inline-block;
+  margin-bottom: 1rem;
+  transform: translateX(1rem);
+  cursor: pointer;
+}
+.signup-form__input {
+  padding: 1.5rem 2rem;
+  border: 1px solid #eee;
+  background-color: #fafbff;
+  border-radius: 1rem;
+  display: block;
+  outline: none;
+  width: 100%;
+  transition: all 0.25s linear;
+}
+.signup-form__input:focus {
+  background-color: #fff;
+  border-color: #fc556f;
+}
+.signup-form__input:focus + .signup-form__check {
+  background-color: #fc556f;
+  color: #fff;
+}
+.signup-form__term input {
   display: none;
 }
-.checkbox__input:checked + .checkbox__label {
-  background-color: #42a7fe;
+.signup-form__term input:checked + label::before {
+  border-color: #fc556f;
+  background-color: #fc556f;
 }
-.checkbox__input:checked + .checkbox__label .checkbox__spin {
-  transform: translateX(6rem);
-}
-.checkbox__label {
-  display: inline-block;
-  width: 10rem;
-  height: 4rem;
-  background-color: #ccc;
-  border-radius: 5rem;
+.signup-form__term label {
+  position: relative;
   cursor: pointer;
-  padding: 0.5rem;
-  transition: 0.25s linear;
+  display: inline-block;
+  margin-top: 3rem;
+  padding-left: 3.5rem;
+  margin-bottom: 5rem;
 }
-.checkbox__spin {
-  width: 4rem;
-  height: 4rem;
-  background-color: #fff;
-  border-radius: 4rem;
-  transition: 0.25s linear;
+.signup-form__term label::before {
+  content: "";
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 8px;
+  background-color: #eee;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  border: 1px solid #ccc;
+  transition: all 0.25s linear;
+}
+.signup-form__submit {
+  width: 8rem;
+  height: 8rem;
+  color: #fff;
+  border: 0;
+  border-radius: 3rem;
+  background-color: #fc556f;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  cursor: pointer;
+  margin-bottom: 65px;
+  box-shadow: 0 10px 10px 0px rgba(252, 85, 111, 0.5);
+}
+.signup-form__validate {
+  position: relative;
+}
+.signup-form__validate .signup-form__input {
+  padding-right: 6rem;
+}
+.signup-form__check {
+  width: 3rem;
+  height: 3rem;
+  position: absolute;
+  border-radius: 10px;
+  background-color: #eee;
+  color: #291667;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  top: 50%;
+  right: 2rem;
+  transform: translateY(-50%);
+  transition: all 0.25s linear;
+}
+.signup__already {
+  color: #291667;
+}
+.signup__already a {
+  color: #fc556f;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 1439px) {
+  .signup__content {
+    width: calc(60% - 1rem);
+  }
+  .signup__image {
+    width: calc(40% - 1rem);
+  }
+}
+@media screen and (max-width: 1279px) {
+  body {
+    padding: 2rem;
+  }
+
+  .signup {
+    padding: 2rem;
+  }
+  .signup__content {
+    width: 100%;
+  }
+  .signup__image {
+    display: none;
+  }
+  .signup-social {
+    flex-direction: column;
+  }
+  .signup-social__item {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+  .signup-form__row {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+  .signup-form__row .signup-form__group {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
