--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body {
   font-size: 1.4rem;
   font-weight: normal;
   background-color: #fbfbfd;
-  padding: 5rem;
   min-height: 100vh;
 }
 
@@ -31,212 +30,95 @@ img {
   max-width: 100%;
 }
 
-.signup {
+table {
   width: 100%;
-  height: 100%;
-  background-color: white;
-  border-radius: 20px;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
-  padding: 10rem;
-  display: flex;
-  justify-content: space-between;
 }
-.signup__content, .signup__image {
-  width: calc(50% - 4rem);
+table th {
+  text-transform: uppercase;
+  font-weight: 600;
 }
-.signup__heading {
-  font-weight: bold;
-  font-size: 4.5rem;
-  margin-bottom: 3rem;
-  color: #291667;
+table td,
+table th {
+  color: #8c94a7;
+  text-align: center;
+  padding: 2rem;
 }
-.signup__caption {
-  color: #fa4c53;
-  font-weight: bold;
-  margin-bottom: 4.5rem;
-  position: relative;
-  padding-left: 7rem;
+table thead tr {
+  border-bottom: 1px solid #ccc;
 }
-.signup__caption::before {
-  content: "";
-  position: absolute;
-  width: 5rem;
-  height: 2px;
-  background-color: #fa4c53;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
+table .desc {
+  white-space: nowrap;
+  max-width: 15rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-.signup-social {
-  display: flex;
-  align-items: stretch;
-  justify-content: space-between;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  margin-bottom: 6rem;
-}
-.signup-social__item {
-  padding: 1.5rem 2.5rem;
-  border-radius: 1rem;
-  border: 1px solid #eee;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  color: #291667;
-  width: calc(50% - 1.5rem);
-}
-.signup-social__icon {
-  margin-right: 2rem;
-}
-.signup-form__row {
-  display: flex;
-  align-items: stretch;
-  justify-content: space-between;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  margin-bottom: 30px;
-}
-.signup-form__row .signup-form__group {
-  width: calc(50% - 1.5rem);
-}
-.signup-form__label {
-  color: #291667;
+table .status {
   display: inline-block;
-  margin-bottom: 1rem;
-  transform: translateX(1rem);
+  padding: 1rem 3rem;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border-radius: 20px;
+}
+table .status--secondary {
+  color: #00c899;
+  background-color: rgba(0, 200, 153, 0.2);
+}
+table .status--warning {
+  color: #f7c539;
+  background-color: rgba(247, 197, 57, 0.2);
+}
+table .status--danger {
+  color: #fc556f;
+  background-color: rgba(252, 85, 111, 0.2);
+}
+table .action {
+  display: flex;
+}
+table .action-icon {
   cursor: pointer;
+  margin: 0 5px;
 }
-.signup-form__input {
-  padding: 1.5rem 2rem;
-  border: 1px solid #eee;
-  background-color: #fafbff;
-  border-radius: 1rem;
-  display: block;
-  outline: none;
-  width: 100%;
-  transition: all 0.25s linear;
-}
-.signup-form__input:focus {
-  background-color: #fff;
-  border-color: #fc556f;
-}
-.signup-form__input:focus + .signup-form__check {
-  background-color: #fc556f;
-  color: #fff;
-}
-.signup-form__term input {
+table .toggle-input {
   display: none;
 }
-.signup-form__term input:checked + label::before {
-  border-color: #fc556f;
-  background-color: #fc556f;
+table .toggle-input:checked + .toggle-label {
+  background-color: #2979ff;
 }
-.signup-form__term label {
+table .toggle-input:checked + .toggle-label::before {
+  background-color: #42a7fe;
+  transform: translate(3rem, -50%);
+}
+table .toggle-label {
+  width: 5rem;
+  height: 5px;
+  border-radius: 1rem;
+  background-color: #ccc;
+  display: inline-block;
   position: relative;
   cursor: pointer;
-  display: inline-block;
-  margin-top: 3rem;
-  padding-left: 3.5rem;
-  margin-bottom: 5rem;
+  transition: all 0.25s linear;
 }
-.signup-form__term label::before {
+table .toggle-label::before {
   content: "";
-  width: 2.5rem;
-  height: 2.5rem;
-  border-radius: 8px;
-  background-color: #eee;
   position: absolute;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 2rem;
+  background-color: #ccc;
   left: 0;
   top: 50%;
   transform: translateY(-50%);
-  border: 1px solid #ccc;
   transition: all 0.25s linear;
-}
-.signup-form__submit {
-  width: 8rem;
-  height: 8rem;
-  color: #fff;
-  border: 0;
-  border-radius: 3rem;
-  background-color: #fc556f;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 2rem;
-  cursor: pointer;
-  margin-bottom: 65px;
-  box-shadow: 0 10px 10px 0px rgba(252, 85, 111, 0.5);
-}
-.signup-form__validate {
-  position: relative;
-}
-.signup-form__validate .signup-form__input {
-  padding-right: 6rem;
-}
-.signup-form__check {
-  width: 3rem;
-  height: 3rem;
-  position: absolute;
-  border-radius: 10px;
-  background-color: #eee;
-  color: #291667;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  top: 50%;
-  right: 2rem;
-  transform: translateY(-50%);
-  transition: all 0.25s linear;
-}
-.signup__already {
-  color: #291667;
-}
-.signup__already a {
-  color: #fc556f;
-  text-decoration: none;
 }
 
-@media screen and (max-width: 1439px) {
-  .signup__content {
-    width: calc(60% - 1rem);
-  }
-  .signup__image {
-    width: calc(40% - 1rem);
-  }
-}
 @media screen and (max-width: 1279px) {
-  body {
-    padding: 2rem;
-  }
-
-  .signup {
-    padding: 2rem;
-  }
-  .signup__content {
+  .table {
     width: 100%;
+    overflow-x: auto;
   }
-  .signup__image {
+  .table::-webkit-scrollbar {
     display: none;
-  }
-  .signup-social {
-    flex-direction: column;
-  }
-  .signup-social__item {
-    width: 100%;
-    margin-bottom: 1rem;
-  }
-  .signup-form__row {
-    flex-direction: column;
-    margin-bottom: 0;
-  }
-  .signup-form__row .signup-form__group {
-    width: 100%;
-    margin-bottom: 2rem;
   }
 }
 
