--- a/other/backdrop-filter/styles.scss
+++ b/other/backdrop-filter/styles.scss
@@ -50,7 +50,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
   font-weight: normal;
-  background-color: $darkcore;
+  background-image: url("./unsplash1.jpg") no-repeat center / cover;
 }
 
 input,
@@ -73,8 +73,26 @@ img {
   width: 100%;
   height: 100%;
 }
-:root {
-  --ratio: 16/9;
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(black, 0.25);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
+
+.content {
+  width: 70vh;
+  height: 70vh;
+  padding: 5rem;
+  background-color: #fff;
 }
 
 @include maxWidth(1439px) {
