--- a/other/clip-path/styles.scss
+++ b/other/clip-path/styles.scss
@@ -5,7 +5,6 @@ $warningv2: #f7c539;
 $danger: #fc556f;
 $redFA4: #fa4c53;
 $dark: #291667;
-$darkcore: #131933;
 $gray8c9: #8c94a7;
 
 $gradient: linear-gradient(to right, $warning, $danger);
@@ -50,7 +49,6 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
   font-weight: normal;
-  background-color: $darkcore;
 }
 
 input,
@@ -73,8 +71,21 @@ img {
   width: 100%;
   height: 100%;
 }
-:root {
-  --ratio: 16/9;
+
+.container {
+  margin: 0 auto;
+  height: 50rem;
+  position: relative;
+  &:before {
+    content: "";
+    position: absolute;
+    @include size(100%);
+    background-image: linear-gradient(to right bottom, #07047e, #1a3bda);
+    clip-path: polygon(0 0, 100% 0, 100% 70%, 40% 80%, 37% 85%, 0 100%);
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
 }
 
 @include maxWidth(1439px) {
