--- a/other/responsive-video-img/styles.scss
+++ b/other/responsive-video-img/styles.scss
@@ -77,6 +77,28 @@ img {
   --ratio: 16/9;
 }
 
+.media {
+  height: 0;
+  position: relative;
+  padding-bottom: calc(100% / (var(--ratio)));
+  iframe {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  img {
+    position: absolute;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 @include maxWidth(1439px) {
 }
 
