--- a/other/responsive-video-img/styles.scss
+++ b/other/responsive-video-img/styles.scss
@@ -40,6 +40,11 @@ $gradient: linear-gradient(to right, $warning, $danger);
   flex-wrap: $wrap;
 }
 
+@mixin responsiveMedia($x, $y) {
+  $bottom: unquote(($y/$x) * 100+ "%");
+  padding-bottom: $bottom;
+}
+
 *,
 *:before,
 *:after {
@@ -50,7 +55,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
   font-weight: normal;
-  background-color: $darkcore;
+  background-color: rgba($color: $darkcore, $alpha: 0.125);
 }
 
 input,
@@ -72,30 +77,22 @@ img {
   max-width: 100%;
   width: 100%;
   height: 100%;
-}
-:root {
-  --ratio: 16/9;
+  object-fit: cover;
 }
 
-.media {
-  height: 0;
+.responsive-media {
   position: relative;
-  padding-bottom: calc(100% / (var(--ratio)));
-  iframe {
-    display: none;
+  height: 0;
+  @include responsiveMedia(16, 9);
+  > * {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
   }
-  img {
-    position: absolute;
-    object-fit: cover;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  iframe {
+    object-fit: fill;
   }
 }
 
@@ -103,4 +100,7 @@ img {
 }
 
 @include maxWidth(1279px) {
+}
+
+@include maxWidth(1223px) {
 }
