--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
   font-weight: normal;
-  background-color: #131933;
+  background-color: rgba(19, 25, 51, 0.125);
 }
 
 input,
@@ -30,32 +30,7 @@ img {
   max-width: 100%;
   width: 100%;
   height: 100%;
-}
-
-:root {
-  --ratio: 16/9;
-}
-
-.media {
-  height: 0;
-  position: relative;
-  padding-bottom: calc(100% / (var(--ratio)));
-}
-.media iframe {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-.media img {
-  position: absolute;
   object-fit: cover;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
 
 /*# sourceMappingURL=styles.css.map */
