--- a/css-grid/form-layout/styles.scss
+++ b/css-grid/form-layout/styles.scss
@@ -57,11 +57,9 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
-  font-size: 12px;
-  line-height: 1.5;
+  font-size: 1.6rem;
   font-weight: normal;
   background-color: rgba($color: $darkcore, $alpha: 0.005);
-  padding: 20px;
 }
 
 input,
@@ -84,6 +82,25 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.form-layout {
+  max-width: 500px;
+  margin: 50px auto;
+}
+
+.form-input {
+  padding: 10px;
+  border: 1px solid $primary;
+  outline: none;
+  width: 100%;
+}
+
+.form-group {
+  margin-bottom: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+  grid-column-gap: 40px;
 }
 
 @include maxWidth(1439px) {
