--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,17 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   font-family: "Poppins", sans-serif;
-  font-size: 1rem;
+  font-size: 12px;
+  line-height: 1.5;
   font-weight: normal;
-  background-color: rgba(19, 25, 51, 0.125);
+  background-color: rgba(19, 25, 51, 0.005);
+  padding: 20px;
 }
 
 input,
@@ -16,7 +22,7 @@ select,
 textarea,
 label {
   font-family: "Poppins", sans-serif;
-  font-size: 1;
+  font-size: 1rem;
   font-weight: normal;
   outline: none;
 }
@@ -31,6 +37,52 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+table {
+  width: 100%;
+}
+table th,
+table td {
+  padding: 15px 30px;
+  text-align: left;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+table th {
+  background-color: #f1f7fd;
+  color: #364d67;
+  font-weight: 600;
+}
+table td {
+  background-color: #fff;
+}
+table tbody tr {
+  border-top: 1px solid #f0f4f8;
+}
+table .user {
+  display: flex;
+  align-items: center;
+  gap: 0 10px;
+}
+table .user img {
+  width: 50px;
+  height: 50px;
+  border-radius: 100rem;
+  flex-shrink: 0;
+}
+
+.sticky-table {
+  overflow: auto;
+  border: 1px solid #f0f4f8;
+}
+.sticky-table tbody td:first-child,
+.sticky-table thead th:first-child {
+  position: sticky;
+  left: 0;
+}
+.sticky-table tbody td:first-child span {
+  padding-right: 50px;
 }
 
 /*# sourceMappingURL=styles.css.map */
